# HerosJourney

./: .gitignore  LICENSE  README.md  pyproject.toml
analysis/: score_human_explanations.py  score_rule_hypotheses.py  visualization.py
analysis/figures_main/: fig12_methods.csv  fig13a_gap.csv  fig13b_nonce.csv  metrics.csv  metrics_phase2.csv  metrics_phase2_qwen27b.csv
env/: env.py
eval/: eval_metrics.py  visualize_concept_tasks.ipynb
herosjourney/core/: generator.py
herosjourney/env/: env.py
herosjourney/runner/: adventure_episode.py  adventure_pipeline.py  models.py  qa_episode.py  run_adventure_story.py
human_experiment/: annotation_tool.html  generate_rule_induction_set.py  server.py
notes/: 2026-03-23-paper-split-discussion.md  2026-03-24-paper-framing-eval-question.md  generalization.md
pipeline/: adventure_episode.py  adventure_pipeline.py  models.py  prompts.py  qa_episode.py  run_adventure_story.py  teacher.py
scripts/: experiments.json  run_all_methods_gpt5.sh  run_all_methods_qwen27b.sh  run_coverage.sh  run_experiments.sh  smoke_test_methods.py  smoke_test_qwen27b.py  smoke_test_run_qwen27b.sh
site/: README.md  data.js  index.html
tools/: process_editor.html
tree_management/: demo_generator.py  elements.py  generator.py  goal_tree.py  property_specification.py  registry.py
tree_management/function_specs/: compositions.py  item_mappings.py  splits.py
tree_management/processes/: property_flat.json
tree_management/rules/: RULE_FORMAT.md  (+8 more)
world_info/: actions.py
write-up/: fig_appx.key  identifiability_levels.md  ~$fig1.pptx
(+30 files in other folders)
